fix(icons): update expand/collapse icons aliases

--- a/packages/default/scss/icons/_layout.scss
+++ b/packages/default/scss/icons/_layout.scss
@@ -59,10 +59,10 @@ $ki-icon-size: $kendo-icon-size;
     // RTL icons
     .k-rtl .k-i-indent-increase,
     .k-rtl .k-i-indent-decrease,
-    .k-rtl .k-i-expand,
-    .k-rtl .k-i-collapse,
-    [dir="rtl"] .k-i-expand,
-    [dir="rtl"] .k-i-collapse {
+    .k-rtl .k-i-caret-alt-right,
+    .k-rtl .k-i-caret-alt-down,
+    [dir="rtl"] .k-i-caret-alt-right,
+    [dir="rtl"] .k-i-caret-alt-down {
         transform: scaleX(-1);
     }
 
